Refactor and add improvements to repro notebooks

--- a/analysis/task1.ipynb
+++ b/analysis/task1.ipynb
@@ -20,10 +20,11 @@
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "from functools import partial\n",
-    "from tqdm import tqdm \n",
+    "from tqdm import tqdm\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "import plotly.io as pio\n",
+    "\n",
     "pio.templates[\"custom\"] = go.layout.Template(\n",
     "    layout=go.Layout(\n",
     "        colorway=px.colors.qualitative.D3,\n",
@@ -49,7 +50,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "path = Path(\"../outputs/predictions/task1\")"
    ]
   },
@@ -202,17 +202,33 @@
     "\n",
     "for implementation_name, implementation_list in implementation_dict.items():\n",
     "    for model_prediction_csv in implementation_list:\n",
-    "        data_percentage = float(model_prediction_csv.stem.split(\"_\")[-2])/100 if len(model_prediction_csv.stem.split(\"_\")) > 2 else 1.0\n",
+    "        data_percentage = (\n",
+    "            float(model_prediction_csv.stem.split(\"_\")[-2]) / 100 if len(model_prediction_csv.stem.split(\"_\")) > 2 else 1.0\n",
+    "        )\n",
     "        df = pd.read_csv(model_prediction_csv)\n",
     "\n",
     "        pred_set = (df[\"target\"].values, df.filter(like=\"conf_scores\").values)\n",
-    "        mAP =  get_score(*pred_set, n_classes=8)\n",
+    "        mAP = get_score(*pred_set, n_classes=8)\n",
     "        BA = get_score(*pred_set, fn=\"balanced_acc\", n_classes=8)\n",
     "\n",
     "        # Get confidence intervals for mAP and BA\n",
-    "        map_ci = bootstrap(pred_set, partial(get_score, n_classes=8), method=\"basic\", n_resamples=N_RESAMPLES, confidence_level=0.95, paired=True)\n",
-    "        ba_ci = bootstrap(pred_set, partial(get_score, fn=\"balanced_acc\", n_classes=8), method=\"basic\", n_resamples=N_RESAMPLES, confidence_level=0.95, paired=True)\n",
-    "        \n",
+    "        map_ci = bootstrap(\n",
+    "            pred_set,\n",
+    "            partial(get_score, n_classes=8),\n",
+    "            method=\"basic\",\n",
+    "            n_resamples=N_RESAMPLES,\n",
+    "            confidence_level=0.95,\n",
+    "            paired=True,\n",
+    "        )\n",
+    "        ba_ci = bootstrap(\n",
+    "            pred_set,\n",
+    "            partial(get_score, fn=\"balanced_acc\", n_classes=8),\n",
+    "            method=\"basic\",\n",
+    "            n_resamples=N_RESAMPLES,\n",
+    "            confidence_level=0.95,\n",
+    "            paired=True,\n",
+    "        )\n",
+    "\n",
     "        row = {\n",
     "            \"Implementation\": implementation_name,\n",
     "            \"Data Percentage\": data_percentage,\n",
@@ -222,39 +238,68 @@
     "            \"BA\": BA,\n",
     "            \"BA_low_CI\": ba_ci.confidence_interval.low,\n",
     "            \"BA_high_CI\": ba_ci.confidence_interval.high,\n",
-    "            }\n",
-    "        \n",
+    "        }\n",
+    "\n",
     "        # Compute statistics for comparison between this implementation and all other ones (difference CI and p-value)\n",
-    "        compare_impementations = {k:v for k, v in implementation_dict.items() if k != implementation_name}\n",
+    "        compare_impementations = {k: v for k, v in implementation_dict.items() if k != implementation_name}\n",
     "        for _implementation_name, _implementations_list in compare_impementations.items():\n",
     "            for _model_prediction_csv in _implementations_list:\n",
-    "                _data_percentage = float(_model_prediction_csv.stem.split(\"_\")[-2])/100 if len(_model_prediction_csv.stem.split(\"_\")) > 2 else 1.0\n",
+    "                _data_percentage = (\n",
+    "                    float(_model_prediction_csv.stem.split(\"_\")[-2]) / 100\n",
+    "                    if len(_model_prediction_csv.stem.split(\"_\")) > 2\n",
+    "                    else 1.0\n",
+    "                )\n",
     "                if data_percentage == _data_percentage:\n",
-    "\n",
     "                    _df = pd.read_csv(_model_prediction_csv)\n",
     "                    _pred = _df.filter(like=\"conf_scores\").values\n",
     "                    _pred_set = (*pred_set, _pred)\n",
-    "                    \n",
+    "\n",
     "                    # Get confidence intervals and p-values for BA between this implementation and the other ones\n",
-    "                    diff_ci = bootstrap(_pred_set, partial(get_score_difference, fn=\"balanced_acc\", n_classes=8), method='basic', n_resamples=N_RESAMPLES, confidence_level=0.95, paired=True)\n",
-    "                    perm_test = permutation_test((_pred_set[1], _pred_set[2]), partial(get_score_difference, _pred_set[0],fn=\"balanced_acc\", n_classes=8, sample_target=False), permutation_type='samples', n_resamples=N_RESAMPLES, alternative='two-sided', vectorized=True)\n",
-    "                    \n",
+    "                    diff_ci = bootstrap(\n",
+    "                        _pred_set,\n",
+    "                        partial(get_score_difference, fn=\"balanced_acc\", n_classes=8),\n",
+    "                        method=\"basic\",\n",
+    "                        n_resamples=N_RESAMPLES,\n",
+    "                        confidence_level=0.95,\n",
+    "                        paired=True,\n",
+    "                    )\n",
+    "                    perm_test = permutation_test(\n",
+    "                        (_pred_set[1], _pred_set[2]),\n",
+    "                        partial(get_score_difference, _pred_set[0], fn=\"balanced_acc\", n_classes=8, sample_target=False),\n",
+    "                        permutation_type=\"samples\",\n",
+    "                        n_resamples=N_RESAMPLES,\n",
+    "                        alternative=\"two-sided\",\n",
+    "                        vectorized=True,\n",
+    "                    )\n",
+    "\n",
     "                    row[f\"BA_diff_CI_low_{_implementation_name}\"] = diff_ci.confidence_interval.low\n",
     "                    row[f\"BA_diff_CI_high_{_implementation_name}\"] = diff_ci.confidence_interval.high\n",
     "                    row[f\"BA_pval_{_implementation_name}\"] = perm_test.pvalue\n",
-    "                    \n",
+    "\n",
     "                    # Get confidence intervals and p-values for mAP between this implementation and the other ones\n",
-    "                    diff_ci = bootstrap(_pred_set, partial(get_score_difference, n_classes=8), method='basic', n_resamples=N_RESAMPLES, confidence_level=0.95, paired=True)\n",
-    "                    perm_test = permutation_test((_pred_set[1], _pred_set[2]), partial(get_score_difference, _pred_set[0], fn=\"average_precision\", n_classes=8, sample_target=False), permutation_type='samples', n_resamples=N_RESAMPLES, alternative='two-sided', vectorized=True)\n",
-    "                    \n",
-    "            \n",
-    "                    \n",
+    "                    diff_ci = bootstrap(\n",
+    "                        _pred_set,\n",
+    "                        partial(get_score_difference, n_classes=8),\n",
+    "                        method=\"basic\",\n",
+    "                        n_resamples=N_RESAMPLES,\n",
+    "                        confidence_level=0.95,\n",
+    "                        paired=True,\n",
+    "                    )\n",
+    "                    perm_test = permutation_test(\n",
+    "                        (_pred_set[1], _pred_set[2]),\n",
+    "                        partial(get_score_difference, _pred_set[0], fn=\"average_precision\", n_classes=8, sample_target=False),\n",
+    "                        permutation_type=\"samples\",\n",
+    "                        n_resamples=N_RESAMPLES,\n",
+    "                        alternative=\"two-sided\",\n",
+    "                        vectorized=True,\n",
+    "                    )\n",
+    "\n",
     "                    row[f\"mAP_diff_CI_low_{_implementation_name}\"] = diff_ci.confidence_interval.low\n",
     "                    row[f\"mAP_diff_CI_high_{_implementation_name}\"] = diff_ci.confidence_interval.high\n",
     "                    row[f\"mAP_pval_{_implementation_name}\"] = perm_test.pvalue\n",
-    "        \n",
+    "\n",
     "        results.append(row)\n",
-    "        pbar.update(1)\n"
+    "        pbar.update(1)"
    ]
   },
   {
@@ -2510,26 +2555,39 @@
     "results_df_ = results_df[results_df[\"Data Percentage\"] == 1]\n",
     "for metric in [\"mAP\", \"BA\"]:\n",
     "    results_df_[f\"e_plus_{metric}\"] = results_df_[f\"{metric}_high_CI\"] - results_df_[metric]\n",
-    "    results_df_[f\"e_minus_{metric}\"] = results_df_[metric] - results_df_[f\"{metric}_low_CI\"] \n",
+    "    results_df_[f\"e_minus_{metric}\"] = results_df_[metric] - results_df_[f\"{metric}_low_CI\"]\n",
     "\n",
-    "    colors = ['49,130,189', '0, 163, 213', '115,115,115', '189,189,189']\n",
+    "    colors = [\"49,130,189\", \"0, 163, 213\", \"115,115,115\", \"189,189,189\"]\n",
     "\n",
-    "    fig = px.bar(results_df_, x=\"Implementation\", y=metric, error_y=f\"e_plus_{metric}\", error_y_minus=f\"e_minus_{metric}\", color='Implementation',\n",
-    "                 template=\"simple_white\",  labels={'Model': '', metric: metric, \"Implementation\": \"Implementation approaches\"}, color_discrete_sequence=[f\"rgb({color})\" for color in colors],\n",
-    "                 range_y=[0.4, 1])               \n",
+    "    fig = px.bar(\n",
+    "        results_df_,\n",
+    "        x=\"Implementation\",\n",
+    "        y=metric,\n",
+    "        error_y=f\"e_plus_{metric}\",\n",
+    "        error_y_minus=f\"e_minus_{metric}\",\n",
+    "        color=\"Implementation\",\n",
+    "        template=\"simple_white\",\n",
+    "        labels={\"Model\": \"\", metric: metric, \"Implementation\": \"Implementation approaches\"},\n",
+    "        color_discrete_sequence=[f\"rgb({color})\" for color in colors],\n",
+    "        range_y=[0.4, 1],\n",
+    "    )\n",
     "\n",
     "    title = \"Full training set\"\n",
-    "    fig.update_layout(title=title,\n",
-    "                       width=400,\n",
-    "                        height=500, autosize=False, legend=dict(\n",
-    "    orientation=\"h\",\n",
-    "    ), \n",
-    "    template='simple_white', title_x=0.5,\n",
-    "    xaxis=dict(showticklabels=False),\n",
-    "    yaxis=dict(showgrid=True),\n",
-    "    xaxis_title=None,\n",
-    "    showlegend=True,\n",
-    "    ), \n",
+    "    fig.update_layout(\n",
+    "        title=title,\n",
+    "        width=400,\n",
+    "        height=500,\n",
+    "        autosize=False,\n",
+    "        legend=dict(\n",
+    "            orientation=\"h\",\n",
+    "        ),\n",
+    "        template=\"simple_white\",\n",
+    "        title_x=0.5,\n",
+    "        xaxis=dict(showticklabels=False),\n",
+    "        yaxis=dict(showgrid=True),\n",
+    "        xaxis_title=None,\n",
+    "        showlegend=True,\n",
+    "    ),\n",
     "\n",
     "    fig.show()\n",
     "    fig.data = []"
@@ -4744,42 +4802,51 @@
    "source": [
     "for metric in [\"mAP\", \"BA\"]:\n",
     "    results_df[f\"e_plus_{metric}\"] = results_df[f\"{metric}_high_CI\"] - results_df[metric]\n",
-    "    results_df[f\"e_minus_{metric}\"] = results_df[metric] - results_df[f\"{metric}_low_CI\"] \n",
+    "    results_df[f\"e_minus_{metric}\"] = results_df[metric] - results_df[f\"{metric}_low_CI\"]\n",
     "\n",
-    "    colors = ['49,130,189', '0, 163, 213', '115,115,115']\n",
-    "    fig = px.line(results_df, x=\"Data Percentage\", y=metric, error_y=f\"e_plus_{metric}\",\n",
-    "                   error_y_minus=f\"e_minus_{metric}\", color='Implementation', markers=True, template=\"simple_white\", \n",
-    "                     labels={'Data Percentage': 'Percentage', metric: metric}, color_discrete_sequence=[f\"rgb({color})\" for color in colors], range_y=[0.4, 1])\n",
-    "    \n",
-    "    fig.update_traces(marker=dict(size=10)) \n",
+    "    colors = [\"49,130,189\", \"0, 163, 213\", \"115,115,115\"]\n",
+    "    fig = px.line(\n",
+    "        results_df,\n",
+    "        x=\"Data Percentage\",\n",
+    "        y=metric,\n",
+    "        error_y=f\"e_plus_{metric}\",\n",
+    "        error_y_minus=f\"e_minus_{metric}\",\n",
+    "        color=\"Implementation\",\n",
+    "        markers=True,\n",
+    "        template=\"simple_white\",\n",
+    "        labels={\"Data Percentage\": \"Percentage\", metric: metric},\n",
+    "        color_discrete_sequence=[f\"rgb({color})\" for color in colors],\n",
+    "        range_y=[0.4, 1],\n",
+    "    )\n",
+    "\n",
+    "    fig.update_traces(marker=dict(size=10))\n",
     "\n",
     "    title = \"Percentages of training data\"\n",
     "    fig.update_traces(\n",
-    "        error_y = dict( \n",
+    "        error_y=dict(\n",
     "            thickness=1,\n",
     "        ),\n",
-    "        \n",
     "    )\n",
-    "    fig.update_layout(title=title, width=600, height=500, autosize=True, \n",
+    "    fig.update_layout(\n",
+    "        title=title,\n",
+    "        width=600,\n",
+    "        height=500,\n",
+    "        autosize=True,\n",
     "        showlegend=True,\n",
-    "    legend=dict(\n",
-    "        yanchor=\"bottom\",\n",
-    "        y=0.01,\n",
-    "        orientation=\"h\",\n",
-    "        xanchor=\"right\",\n",
-    "        x=1.2\n",
-    "    ), template='simple_white', title_x=0.5,\n",
+    "        legend=dict(yanchor=\"bottom\", y=0.01, orientation=\"h\", xanchor=\"right\", x=1.2),\n",
+    "        template=\"simple_white\",\n",
+    "        title_x=0.5,\n",
     "        yaxis=dict(showgrid=True),\n",
-    "        xaxis = dict(\n",
-    "                    tickmode='array', #change 1\n",
-    "                    tickvals = [0.1, 0.2, 0.5, 1], #change 2\n",
-    "                    ticktext = ['10%', '20%', '50%', '100%'], #change 3\n",
-    "                    autorange=\"reversed\"\n",
-    "                    ),\n",
+    "        xaxis=dict(\n",
+    "            tickmode=\"array\",  # change 1\n",
+    "            tickvals=[0.1, 0.2, 0.5, 1],  # change 2\n",
+    "            ticktext=[\"10%\", \"20%\", \"50%\", \"100%\"],  # change 3\n",
+    "            autorange=\"reversed\",\n",
+    "        ),\n",
     "    )\n",
-    "   \n",
+    "\n",
     "    fig.show()\n",
-    "    fig.data = []\n"
+    "    fig.data = []"
    ]
   }
  ],
