--- a/data/preprocessing/luna16/Process_Data.ipynb
+++ b/data/preprocessing/luna16/Process_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,32 +12,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('/home/suraj/Repositories/foundation-cancer-image-biomarker/data/preprocessing/luna16/annotations/luna16_training_annotations.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get train, val and test splits based on stratification by malignancy\n",
-    "train_df, test_df = train_test_split(\n",
-    "    df, test_size=0.5, random_state=21, stratify=df[\"malignancy\"]\n",
-    ")\n",
-    "\n",
-    "val_df, test_df = train_test_split(\n",
-    "    test_df, test_size=0.5, random_state=21, stratify=test_df[\"malignancy\"]\n",
+    "df = pd.read_csv(\n",
+    "    \"/home/suraj/Repositories/foundation-cancer-image-biomarker/data/preprocessing/luna16/annotations/luna16_training_annotations.csv\"\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get train, val and test splits based on stratification by malignancy\n",
+    "train_df, test_df = train_test_split(df, test_size=0.5, random_state=21, stratify=df[\"malignancy\"])\n",
+    "\n",
+    "val_df, test_df = train_test_split(test_df, test_size=0.5, random_state=21, stratify=test_df[\"malignancy\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +44,7 @@
        "(338, 169, 170)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
