Fix missing cell info in notebook

--- a/notebooks/usecase.ipynb
+++ b/notebooks/usecase.ipynb
@@ -229,7 +229,8 @@
     }
    ],
    "source": [
-    "\n",
+    "X = feature_df.copy().filter([f\"pred_{i}\" for i in range(0, 4096)])\n",
+    "feature_df[\"conf_score\"] = pipeline.predict_proba(X)[:, 1]\n",
     "feature_df[\"conf_score\"].hist()"
    ]
   }
