Add loading of precropped patches

--- a/notebooks/usecase.ipynb
+++ b/notebooks/usecase.ipynb
@@ -105,36 +105,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-09-09 12:35:34.077 | INFO     | fmcib.run:get_features:12 - Loading CSV file ...\n",
-      "2023-09-09 12:35:34.091 | INFO     | fmcib.preprocessing:get_dataloader:31 - Building dataloader instance ...\n",
-      "2023-09-09 12:35:34.111 | INFO     | fmcib.models.resnet50:resnet50:13 - Loading pretrained foundation model (Resnet50) on cuda...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Spatial size: (75, 50, 50)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-09-09 12:35:40.617 | INFO     | fmcib.run:get_features:18 - Running inference over batches ...\n",
-      "  0%|          | 0/59 [00:00<?, ?it/s]"
+      "2023-09-12 16:02:53.227 | INFO     | fmcib.run:get_features:12 - Loading CSV file ...\n",
+      "2023-09-12 16:02:53.240 | INFO     | fmcib.preprocessing:get_dataloader:42 - Building dataloader instance ...\n",
+      "2023-09-12 16:02:53.257 | INFO     | fmcib.models.resnet50:resnet50:13 - Loading pretrained foundation model (Resnet50) on cuda...\n",
+      "2023-09-12 16:03:00.407 | INFO     | fmcib.run:get_features:18 - Running inference over batches ...\n",
+      "100%|██████████| 16/16 [00:01<00:00, 10.84it/s]\n"
      ]
     }
    ],
    "source": [
-    "feature_df = get_features(\"csv_path\", weights_path=\"pretrained_ckpt\", spatial_size=(75, 50, 50))"
+    "feature_df = get_features(\"csv_path\", weights_path=\"ckpt_path\", spatial_size=(75, 50, 50), precropped=True)"
    ]
   },
   {
