Fix failing builds

--- a/analysis/combined_results.ipynb
+++ b/analysis/combined_results.ipynb
@@ -39,7 +39,7 @@
     "task3_results[\"Order\"] = 8\n",
     "\n",
     "task3_results[\"metric\"] = task3_results[\"AUC\"]\n",
-    "task3_results[\"Data Percentage\"] = 1\n"
+    "task3_results[\"Data Percentage\"] = 1"
    ]
   },
   {
@@ -51,7 +51,9 @@
     "combined_results = pd.concat([task1_results, task2_results, task3_results])\n",
     "# combined_results = combined_results[combined_results['Data Percentage'].isin([1, 0.1])]\n",
     "\n",
-    "combined_results[\"Task\"] = combined_results.apply(lambda x: x[\"Task\"] + \"\\n@ \" + str(x[\"Data Percentage\"] * 100) + \"%\" if x[\"Data Percentage\"] != 1 else x[\"Task\"], axis=1)\n",
+    "combined_results[\"Task\"] = combined_results.apply(\n",
+    "    lambda x: x[\"Task\"] + \"\\n@ \" + str(x[\"Data Percentage\"] * 100) + \"%\" if x[\"Data Percentage\"] != 1 else x[\"Task\"], axis=1\n",
+    ")\n",
     "\n",
     "\n",
     "def set_order(data_perc, order):\n",
@@ -62,6 +64,7 @@
     "    elif data_perc == 0.1:\n",
     "        order += 3\n",
     "    return order\n",
+    "\n",
     "\n",
     "combined_results[\"Order\"] = combined_results.apply(lambda x: set_order(x[\"Data Percentage\"], x[\"Order\"]), axis=1)\n",
     "\n",
@@ -115,13 +118,13 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "plt.rcParams['text.color'] = 'white'\n",
-    "combined_results['Task'] = combined_results['Task'].astype('category')\n",
-    "combined_results['Task_codes'] = combined_results[\"Order\"]\n",
+    "plt.rcParams[\"text.color\"] = \"white\"\n",
+    "combined_results[\"Task\"] = combined_results[\"Task\"].astype(\"category\")\n",
+    "combined_results[\"Task_codes\"] = combined_results[\"Order\"]\n",
     "# combined_results.sort_values(by=[\"Task_codes\"], inplace=True)\n",
     "\n",
     "# Create a list of unique 'Implementation' values\n",
-    "implementations = combined_results['Implementation'].sort_values().unique()\n",
+    "implementations = combined_results[\"Implementation\"].sort_values().unique()\n",
     "\n",
     "# Create a figure and polar projection\n",
     "fig = plt.figure(figsize=(20, 10))  # Make the background transparent\n",
@@ -132,29 +135,43 @@
     "\n",
     "# Plot a line for each 'Implementation'\n",
     "for idx, implementation in enumerate(implementations):\n",
-    "    implementation_data = combined_results[combined_results['Implementation'] == implementation]\n",
+    "    implementation_data = combined_results[combined_results[\"Implementation\"] == implementation]\n",
     "    # Append the first row to the end to complete the radar plot\n",
     "    implementation_data = implementation_data.append(implementation_data.iloc[0])\n",
-    "    ax.plot(np.deg2rad(implementation_data['Task_codes']*360/len(combined_results['Task'].cat.categories)), implementation_data['metric'], label=implementation, color=color_palette[idx])\n",
-    "    ax.fill(np.deg2rad(implementation_data['Task_codes']*360/len(combined_results['Task'].cat.categories)), implementation_data['metric'], color=color_palette[idx], alpha=0.1)\n",
+    "    ax.plot(\n",
+    "        np.deg2rad(implementation_data[\"Task_codes\"] * 360 / len(combined_results[\"Task\"].cat.categories)),\n",
+    "        implementation_data[\"metric\"],\n",
+    "        label=implementation,\n",
+    "        color=color_palette[idx],\n",
+    "    )\n",
+    "    ax.fill(\n",
+    "        np.deg2rad(implementation_data[\"Task_codes\"] * 360 / len(combined_results[\"Task\"].cat.categories)),\n",
+    "        implementation_data[\"metric\"],\n",
+    "        color=color_palette[idx],\n",
+    "        alpha=0.1,\n",
+    "    )\n",
     "\n",
     "# Set the theta zero location and direction\n",
-    "ax.set_theta_zero_location('N')\n",
+    "ax.set_theta_zero_location(\"N\")\n",
     "ax.set_theta_direction(-1)\n",
     "\n",
     "# Set the r limits and label\n",
     "ax.set_ylim([0.4, 1])\n",
     "ax.set_rlabel_position(70)\n",
-    "ax.set_xticks(np.deg2rad(np.linspace(0, 360, len(combined_results['Task'].cat.categories), endpoint=False)))\n",
-    "ax.set_xticklabels(combined_results['Task'].unique(), fontsize=14, verticalalignment='top', color=\"white\")  # Increase font size and add more space between the plot and tick labels\n",
-    "ax.xaxis.label.set_color('white')  # Make xticks white color\n",
-    "ax.legend(bbox_to_anchor=(0, 1), fontsize=16, frameon=False, facecolor='white', ncol=1)  # Increase font size, make legend transparent and text white, and make legend horizontal\n",
-    "ax.spines['polar'].set_visible(False)\n",
-    "ax.tick_params(axis='y', colors='white')\n",
+    "ax.set_xticks(np.deg2rad(np.linspace(0, 360, len(combined_results[\"Task\"].cat.categories), endpoint=False)))\n",
+    "ax.set_xticklabels(\n",
+    "    combined_results[\"Task\"].unique(), fontsize=14, verticalalignment=\"top\", color=\"white\"\n",
+    ")  # Increase font size and add more space between the plot and tick labels\n",
+    "ax.xaxis.label.set_color(\"white\")  # Make xticks white color\n",
+    "ax.legend(\n",
+    "    bbox_to_anchor=(0, 1), fontsize=16, frameon=False, facecolor=\"white\", ncol=1\n",
+    ")  # Increase font size, make legend transparent and text white, and make legend horizontal\n",
+    "ax.spines[\"polar\"].set_visible(False)\n",
+    "ax.tick_params(axis=\"y\", colors=\"white\")\n",
     "\n",
     "ax.yaxis.grid(False)\n",
     "plt.show()\n",
-    "fig.savefig(\"combined_results.png\", transparent=True, dpi=500)  # Save the figure with a transparent background\n"
+    "fig.savefig(\"combined_results.png\", transparent=True, dpi=500)  # Save the figure with a transparent background"
    ]
   },
   {
