--- a/analysis/efficiency.ipynb
+++ b/analysis/efficiency.ipynb
@@ -1016,25 +1016,10 @@
     "    \"Train\": {\n",
     "        \"Task1\": {\n",
     "            \"Fine-tuning\": 42000 // 60,\n",
-    "            \"Features\": {\n",
-    "                \"Feature Extraction\": 25,\n",
-    "                \"Linear Modelling\": 6892 // 60\n",
-    "            },\n",
+    "            \"Features\": {\"Feature Extraction\": 25, \"Linear Modelling\": 6892 // 60},\n",
     "        },\n",
-    "        \"Task2\": {\n",
-    "            \"Fine-tuning\": 15000 // 60,\n",
-    "            \"Features\": {\n",
-    "                \"Feature Extraction\": 870 // 60,\n",
-    "                \"Linear Modelling\": 110 // 60\n",
-    "            }\n",
-    "        },\n",
-    "        \"Task3\": {\n",
-    "            \"Fine-tuning\": 20500 // 60,\n",
-    "            \"Features\": {\n",
-    "                \"Feature Extraction\": 260 // 60,\n",
-    "                \"Linear Modelling\": 11 // 60\n",
-    "            }\n",
-    "        }\n",
+    "        \"Task2\": {\"Fine-tuning\": 15000 // 60, \"Features\": {\"Feature Extraction\": 870 // 60, \"Linear Modelling\": 110 // 60}},\n",
+    "        \"Task3\": {\"Fine-tuning\": 20500 // 60, \"Features\": {\"Feature Extraction\": 260 // 60, \"Linear Modelling\": 11 // 60}},\n",
     "    }\n",
     "}\n",
     "\n",
@@ -1057,45 +1042,54 @@
     "}\n",
     "\n",
     "# Add bars for \"Fine-tuned\" values\n",
-    "fig.add_trace(go.Bar(\n",
-    "    x=adjusted_tasks_fine_tuned,\n",
-    "    y=fine_tuned_values,\n",
-    "    name='Fine-tuning',\n",
-    "    marker_color=colors[\"Fine-tuning\"],\n",
-    "    showlegend=True,\n",
-    "    text=fine_tuned_values,\n",
-    "    textposition='auto'\n",
-    "))\n",
+    "fig.add_trace(\n",
+    "    go.Bar(\n",
+    "        x=adjusted_tasks_fine_tuned,\n",
+    "        y=fine_tuned_values,\n",
+    "        name=\"Fine-tuning\",\n",
+    "        marker_color=colors[\"Fine-tuning\"],\n",
+    "        showlegend=True,\n",
+    "        text=fine_tuned_values,\n",
+    "        textposition=\"auto\",\n",
+    "    )\n",
+    ")\n",
     "\n",
     "# Add bars for \"Feature Extraction\" values\n",
-    "fig.add_trace(go.Bar(\n",
-    "    x=adjusted_tasks_features,\n",
-    "    y=inference_values,\n",
-    "    name='Feature Extraction',\n",
-    "    marker_color=colors[\"Feature Extraction\"],\n",
-    "    showlegend=True,\n",
-    "    text=[val1 + val2 for val1, val2 in zip(inference_values, modelling_values)],\n",
-    "    textposition='auto'\n",
-    "))\n",
+    "fig.add_trace(\n",
+    "    go.Bar(\n",
+    "        x=adjusted_tasks_features,\n",
+    "        y=inference_values,\n",
+    "        name=\"Feature Extraction\",\n",
+    "        marker_color=colors[\"Feature Extraction\"],\n",
+    "        showlegend=True,\n",
+    "        text=[val1 + val2 for val1, val2 in zip(inference_values, modelling_values)],\n",
+    "        textposition=\"auto\",\n",
+    "    )\n",
+    ")\n",
     "\n",
     "# Add bars for \"Linear Modelling\" values\n",
-    "fig.add_trace(go.Bar(\n",
-    "    x=adjusted_tasks_features,\n",
-    "    y=modelling_values,\n",
-    "    name='Linear Modelling',\n",
-    "    marker_color=colors[\"Linear Modelling\"],\n",
-    "    base=inference_values,\n",
-    "    showlegend=True,\n",
-    "    text=[val1 + val2 for val1, val2 in zip(inference_values, modelling_values)],\n",
-    "    textposition='auto'\n",
-    "))\n",
+    "fig.add_trace(\n",
+    "    go.Bar(\n",
+    "        x=adjusted_tasks_features,\n",
+    "        y=modelling_values,\n",
+    "        name=\"Linear Modelling\",\n",
+    "        marker_color=colors[\"Linear Modelling\"],\n",
+    "        base=inference_values,\n",
+    "        showlegend=True,\n",
+    "        text=[val1 + val2 for val1, val2 in zip(inference_values, modelling_values)],\n",
+    "        textposition=\"auto\",\n",
+    "    )\n",
+    ")\n",
     "\n",
     "fig.update_layout(\n",
-    "    barmode='relative',\n",
-    "    title='',\n",
-    "    xaxis_title='Task',\n",
-    "    yaxis_title='Time (in minutes)',\n",
-    "    xaxis={'categoryorder':'array', 'categoryarray': [val for pair in zip(adjusted_tasks_fine_tuned, adjusted_tasks_features) for val in pair]},\n",
+    "    barmode=\"relative\",\n",
+    "    title=\"\",\n",
+    "    xaxis_title=\"Task\",\n",
+    "    yaxis_title=\"Time (in minutes)\",\n",
+    "    xaxis={\n",
+    "        \"categoryorder\": \"array\",\n",
+    "        \"categoryarray\": [val for pair in zip(adjusted_tasks_fine_tuned, adjusted_tasks_features) for val in pair],\n",
+    "    },\n",
     "    # Minimalist style adjustments\n",
     "    plot_bgcolor=\"white\",\n",
     "    paper_bgcolor=\"white\",\n",
@@ -1108,7 +1102,7 @@
     "\n",
     "# Show the figure\n",
     "fig.show()\n",
-    "fig.write_image(\"figures/efficiency.svg\")\n"
+    "fig.write_image(\"figures/efficiency.svg\")"
    ]
   },
   {
@@ -2044,18 +2038,12 @@
     "\n",
     "# Define the dictionary\n",
     "efficiency_dict = {\n",
-    "    \"Fine-tuning\": {\n",
-    "        \"GPU VRAM\": 15.5,\n",
-    "        \"System RAM\": 2.5\n",
-    "    },\n",
-    "    \"Feature Extraction\": {\n",
-    "        \"GPU VRAM\": 0,\n",
-    "        \"System RAM\": 15.7 \n",
-    "    },\n",
+    "    \"Fine-tuning\": {\"GPU VRAM\": 15.5, \"System RAM\": 2.5},\n",
+    "    \"Feature Extraction\": {\"GPU VRAM\": 0, \"System RAM\": 15.7},\n",
     "    \"Linear Modelling\": {\n",
     "        \"GPU VRAM\": 0,\n",
     "        \"System RAM\": 4.9,\n",
-    "    }\n",
+    "    },\n",
     "}\n",
     "\n",
     "# Extracting data\n",
@@ -2067,29 +2055,27 @@
     "fig = go.Figure()\n",
     "\n",
     "# Adding GPU VRAM bars\n",
-    "fig.add_trace(go.Bar(\n",
-    "    x=methods,\n",
-    "    y=gpu_vram,\n",
-    "    name='GPU VRAM',\n",
-    "    marker_color='rgba(234, 170, 40, 1)',  # Added transparency\n",
-    "    text=gpu_vram\n",
-    "))\n",
+    "fig.add_trace(\n",
+    "    go.Bar(x=methods, y=gpu_vram, name=\"GPU VRAM\", marker_color=\"rgba(234, 170, 40, 1)\", text=gpu_vram)  # Added transparency\n",
+    ")\n",
     "\n",
     "# Adding System RAM bars\n",
-    "fig.add_trace(go.Bar(\n",
-    "    x=methods,\n",
-    "    y=system_ram,\n",
-    "    name='System RAM',\n",
-    "    marker_color='rgba(40, 179, 235, 0.75)',  # Added transparency\n",
-    "    text=system_ram\n",
-    "))\n",
+    "fig.add_trace(\n",
+    "    go.Bar(\n",
+    "        x=methods,\n",
+    "        y=system_ram,\n",
+    "        name=\"System RAM\",\n",
+    "        marker_color=\"rgba(40, 179, 235, 0.75)\",  # Added transparency\n",
+    "        text=system_ram,\n",
+    "    )\n",
+    ")\n",
     "\n",
     "# Layout configurations\n",
     "fig.update_layout(\n",
-    "    title=' ',\n",
-    "    xaxis_title=' ',\n",
-    "    yaxis_title='RAM (in GB)',\n",
-    "    barmode='group',\n",
+    "    title=\" \",\n",
+    "    xaxis_title=\" \",\n",
+    "    yaxis_title=\"RAM (in GB)\",\n",
+    "    barmode=\"group\",\n",
     "    width=500,\n",
     "    bargap=0.1,\n",
     "    paper_bgcolor=\"white\",\n",
@@ -2099,7 +2085,7 @@
     ")\n",
     "\n",
     "fig.show()\n",
-    "fig.write_image(\"figures/efficiency_ram.png\", scale=10)\n"
+    "fig.write_image(\"figures/efficiency_ram.png\", scale=10)"
    ]
   }
  ],
