--- a/analysis/task3_eval.ipynb
+++ b/analysis/task3_eval.ipynb
@@ -18,8 +18,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lung1_original = pd.read_csv(\"/home/suraj/Repositories/foundation-cancer-image-biomarker/data/preprocessing/lung1/annotations.csv\")\n",
-    "radio_original = pd.read_csv(\"/home/suraj/Repositories/foundation-cancer-image-biomarker/data/preprocessing/radio/nsclc_radiogenomics.csv\")"
+    "lung1_original = pd.read_csv(\n",
+    "    \"/home/suraj/Repositories/foundation-cancer-image-biomarker/data/preprocessing/lung1/annotations.csv\"\n",
+    ")\n",
+    "radio_original = pd.read_csv(\n",
+    "    \"/home/suraj/Repositories/foundation-cancer-image-biomarker/data/preprocessing/radio/nsclc_radiogenomics.csv\"\n",
+    ")"
    ]
   },
   {
@@ -28,7 +32,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = joblib.load(open('/home/suraj/Repositories/foundation-cancer-image-biomarker/outputs/predictions/task3/HarvardRT/ModelsGenesis/model.pkl', 'rb'))"
+    "model = joblib.load(\n",
+    "    open(\n",
+    "        \"/home/suraj/Repositories/foundation-cancer-image-biomarker/outputs/predictions/task3/HarvardRT/ModelsGenesis/model.pkl\",\n",
+    "        \"rb\",\n",
+    "    )\n",
+    ")"
    ]
   },
   {
@@ -46,11 +55,19 @@
     }
    ],
    "source": [
-    "train_df = pd.read_csv(\"/home/suraj/Repositories/foundation-cancer-image-biomarker/outputs/features/models_genesis/task3/train_features.csv\")\n",
-    "val_df = pd.read_csv(\"/home/suraj/Repositories/foundation-cancer-image-biomarker/outputs/features/models_genesis/task3/val_features.csv\")\n",
+    "train_df = pd.read_csv(\n",
+    "    \"/home/suraj/Repositories/foundation-cancer-image-biomarker/outputs/features/models_genesis/task3/train_features.csv\"\n",
+    ")\n",
+    "val_df = pd.read_csv(\n",
+    "    \"/home/suraj/Repositories/foundation-cancer-image-biomarker/outputs/features/models_genesis/task3/val_features.csv\"\n",
+    ")\n",
     "\n",
-    "lung1_df = pd.read_csv(\"/home/suraj/Repositories/foundation-cancer-image-biomarker/outputs/features/models_genesis/task3/lung1_features.csv\")\n",
-    "radio_df = pd.read_csv(\"/home/suraj/Repositories/foundation-cancer-image-biomarker/outputs/features/models_genesis/task3/radio_features.csv\")"
+    "lung1_df = pd.read_csv(\n",
+    "    \"/home/suraj/Repositories/foundation-cancer-image-biomarker/outputs/features/models_genesis/task3/lung1_features.csv\"\n",
+    ")\n",
+    "radio_df = pd.read_csv(\n",
+    "    \"/home/suraj/Repositories/foundation-cancer-image-biomarker/outputs/features/models_genesis/task3/radio_features.csv\"\n",
+    ")"
    ]
   },
   {
@@ -454,7 +471,7 @@
     }
    ],
    "source": [
-    "len(train_df), len(val_df), len(lung1_df), len(radio_df)\n"
+    "len(train_df), len(val_df), len(lung1_df), len(radio_df)"
    ]
   },
   {
@@ -463,8 +480,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lung1_df[\"surv2yr\"] = (lung1_df[\"Survival.time\"]/365.0 >= 2.0).astype(int)\n",
-    "radio_df[\"surv2yr\"] = (radio_df[\"Survival.time\"]/365.0 >= 2.0).astype(int)"
+    "lung1_df[\"surv2yr\"] = (lung1_df[\"Survival.time\"] / 365.0 >= 2.0).astype(int)\n",
+    "radio_df[\"surv2yr\"] = (radio_df[\"Survival.time\"] / 365.0 >= 2.0).astype(int)"
    ]
   },
   {
@@ -476,13 +493,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "\n",
-    "data = {\n",
-    "    \"train\": {},\n",
-    "    \"test1\": {},\n",
-    "    \"test2\": {},\n",
-    "    \"val\": {},\n",
-    "    \"target\": {}\n",
-    "    }\n",
+    "data = {\"train\": {}, \"test1\": {}, \"test2\": {}, \"val\": {}, \"target\": {}}\n",
     "\n",
     "feats = train_df.filter(like=\"pred\").columns\n",
     "\n",
@@ -547,9 +558,9 @@
     "radio_df[\"conf_scores_class_1\"] = radio_pred\n",
     "val_df[\"conf_scores_class_1\"] = train_pred\n",
     "\n",
-    "val_df.to_csv(checkpoint_dir/ \"HarvardRT\"/ \"modelsgen_features.csv\", index=False)\n",
-    "lung1_df.to_csv(checkpoint_dir/ \"LUNG1\"/ \"modelsgen_features.csv\", index=False)\n",
-    "radio_df.to_csv(checkpoint_dir/ \"RADIO\"/ \"modelsgen_features.csv\", index=False)"
+    "val_df.to_csv(checkpoint_dir / \"HarvardRT\" / \"modelsgen_features.csv\", index=False)\n",
+    "lung1_df.to_csv(checkpoint_dir / \"LUNG1\" / \"modelsgen_features.csv\", index=False)\n",
+    "radio_df.to_csv(checkpoint_dir / \"RADIO\" / \"modelsgen_features.csv\", index=False)"
    ]
   },
   {
