--- a/analysis/pretraining_comparison.ipynb
+++ b/analysis/pretraining_comparison.ipynb
@@ -117,7 +117,7 @@
     "            \"mAP_high_CI\": map_ci[1][1],\n",
     "            \"BA\": ba_ci[0],\n",
     "            \"BA_low_CI\": ba_ci[1][0],\n",
-    "            \"BA_high_CI\": ba_ci[1][1]\n",
+    "            \"BA_high_CI\": ba_ci[1][1],\n",
     "        }\n",
     "\n",
     "        # Compute statistics for comparison between this implementation and all other ones (difference CI and p-value)\n",
@@ -190,9 +190,9 @@
    "outputs": [],
    "source": [
     "# results_df = pd.read_csv(\"result_csvs/pretraining_comparison.csv\")\n",
-    "results_df['Implementation_Rank'] = results_df['Implementation'].map(implementation_rank)\n",
+    "results_df[\"Implementation_Rank\"] = results_df[\"Implementation\"].map(implementation_rank)\n",
     "results_df.sort_values(by=[\"Data Percentage\", \"Implementation_Rank\"], inplace=True, ascending=True)\n",
-    "results_df.drop('Implementation_Rank', axis=1, inplace=True)"
+    "results_df.drop(\"Implementation_Rank\", axis=1, inplace=True)"
    ]
   },
   {
@@ -2493,13 +2493,11 @@
    "source": [
     "results_df_ = results_df[results_df[\"Data Percentage\"] == 1]\n",
     "n_colors = len(results_df_[\"Implementation\"].unique()) + 2\n",
-    "colors = px.colors.sample_colorscale(\"Greens\", [n/(n_colors -1) for n in range(n_colors)])[2:]\n",
+    "colors = px.colors.sample_colorscale(\"Greens\", [n / (n_colors - 1) for n in range(n_colors)])[2:]\n",
     "\n",
     "for metric in [\"mAP\", \"BA\"]:\n",
     "    results_df_[f\"e_plus_{metric}\"] = results_df_[f\"{metric}_high_CI\"] - results_df_[metric]\n",
     "    results_df_[f\"e_minus_{metric}\"] = results_df_[metric] - results_df_[f\"{metric}_low_CI\"]\n",
-    "\n",
-    "\n",
     "\n",
     "    fig = px.bar(\n",
     "        results_df_,\n",
@@ -2520,7 +2518,7 @@
     "        width=600,\n",
     "        height=500,\n",
     "        autosize=True,\n",
-    "         legend=dict(orientation=\"v\"),\n",
+    "        legend=dict(orientation=\"v\"),\n",
     "        bargap=0,  # Reduce gap between bars\n",
     "        template=\"simple_white\",\n",
     "        title_x=0.5,\n",
@@ -2530,11 +2528,10 @@
     "        showlegend=True,\n",
     "    ),\n",
     "\n",
-    "\n",
     "    fig.show()\n",
     "    fig.write_image(f\"figures/pretraining_{metric}_full.png\", scale=10)\n",
     "\n",
-    "    fig.data = []\n"
+    "    fig.data = []"
    ]
   },
   {
@@ -2543,8 +2540,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "results_df[\"Data Percentage\"] = results_df[\"Data Percentage\"].apply(lambda x: f\"{int(x * 100)}%\")\n"
+    "results_df[\"Data Percentage\"] = results_df[\"Data Percentage\"].apply(lambda x: f\"{int(x * 100)}%\")"
    ]
   },
   {
