--- a/analysis/task1.ipynb
+++ b/analysis/task1.ipynb
@@ -63,10 +63,10 @@
     "    \"Foundation (Features)\": [csv_path for csv_path in path.glob(\"foundation_features*.csv\")],\n",
     "    \"Foundation (Finetuned)\": [csv_path for csv_path in path.glob(\"foundation_finetuned*.csv\")],\n",
     "    \"Supervised\": [csv_path for csv_path in path.glob(\"supervised*.csv\")],\n",
-    "    \"Med3D (Features)\": [csv_path for csv_path in path.glob(\"med3d_features*.csv\")], \n",
-    "    \"Models Genesis (Features)\": [csv_path for csv_path in path.glob(\"modelsgen_features*.csv\")], \n",
-    "    \"Med3D (Finetuned)\": [csv_path for csv_path in path.glob(\"med3d_finetuned*.csv\")], \n",
-    "    \"Models Genesis (Finetuned)\": [csv_path for csv_path in path.glob(\"modelsgen_finetuned*.csv\")], \n",
+    "    \"Med3D (Features)\": [csv_path for csv_path in path.glob(\"med3d_features*.csv\")],\n",
+    "    \"Models Genesis (Features)\": [csv_path for csv_path in path.glob(\"modelsgen_features*.csv\")],\n",
+    "    \"Med3D (Finetuned)\": [csv_path for csv_path in path.glob(\"med3d_finetuned*.csv\")],\n",
+    "    \"Models Genesis (Finetuned)\": [csv_path for csv_path in path.glob(\"modelsgen_finetuned*.csv\")],\n",
     "}\n",
     "\n",
     "implementation_rank = {key: i for i, key in enumerate(implementation_dict.keys())}"
@@ -127,7 +127,7 @@
     "            \"mAP_high_CI\": map_ci[1][1],\n",
     "            \"BA\": ba_ci[0],\n",
     "            \"BA_low_CI\": ba_ci[1][0],\n",
-    "            \"BA_high_CI\": ba_ci[1][1]\n",
+    "            \"BA_high_CI\": ba_ci[1][1],\n",
     "        }\n",
     "\n",
     "        # Compute statistics for comparison between this implementation and all other ones (difference CI and p-value)\n",
@@ -180,9 +180,9 @@
    "outputs": [],
    "source": [
     "results_df = pd.DataFrame(results)\n",
-    "results_df['Implementation_Rank'] = results_df['Implementation'].map(implementation_rank)\n",
+    "results_df[\"Implementation_Rank\"] = results_df[\"Implementation\"].map(implementation_rank)\n",
     "results_df.sort_values(by=[\"Data Percentage\", \"Implementation_Rank\"], inplace=True, ascending=True)\n",
-    "results_df.drop('Implementation_Rank', axis=1, inplace=True)"
+    "results_df.drop(\"Implementation_Rank\", axis=1, inplace=True)"
    ]
   },
   {
